Optimizar SEO y agregar imagen social para la busqueda en google

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="theme-color" content="#26A69A" />
+    
+    <!-- ============================================
+         SEO BÁSICO - LO MÁS IMPORTANTE
+         ============================================ -->
+    <title>FletiX - Plataforma Logística | Conectamos Empresas con Transportistas en Perú</title>
+    <meta 
+      name="description" 
+      content="FletiX conecta empresas con transportistas certificados en todo Perú. Cotización automática, dashboard analytics y red verificada de servicios logísticos. Descarga la app ahora." 
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="keywords" content="transporte de carga Perú, logística empresarial, transportistas certificados, plataforma logística, cotización de fletes, FletiX" />
+    <meta name="author" content="FletiX" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- ============================================
+         OPEN GRAPH - Para Redes Sociales
+         ============================================ -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fletix.vercel.app/" />
+    <meta property="og:title" content="FletiX - Conectamos Empresas con Transportistas de Confianza" />
+    <meta property="og:description" content="Plataforma logística con transportistas verificados, cotización automática y dashboard analytics. Disponible en Perú." />
+    <meta property="og:image" content="https://fletix.vercel.app/og-image.jpg" />
+    <meta property="og:site_name" content="FletiX" />
+    <meta property="og:locale" content="es_PE" />
+
+    <!-- ============================================
+         TWITTER CARDS
+         ============================================ -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://fletix.vercel.app/" />
+    <meta name="twitter:title" content="FletiX - Plataforma Logística en Perú" />
+    <meta name="twitter:description" content="Conectamos empresas con transportistas certificados. Cotización automática y red verificada." />
+    <meta name="twitter:image" content="https://fletix.vercel.app/og-image.jpg" />
+
+    <!-- ============================================
+         ÍCONOS Y MANIFEST
+         ============================================ -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
+    <!-- ============================================
+         DATOS ESTRUCTURADOS - JSON-LD para Google
+         ============================================ -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "FletiX",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "Android",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "PEN"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "ratingCount": "100"
+      },
+      "description": "Plataforma logística que conecta empresas con transportistas certificados en Perú"
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "FletiX",
+      "url": "https://fletix.vercel.app",
+      "logo": "https://fletix.vercel.app/logo_fletix.png",
+      "description": "Plataforma logística en Perú",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+51-973337625",
+        "contactType": "Customer Service",
+        "areaServed": "PE",
+        "availableLanguage": "Spanish"
+      },
+      "sameAs": [
+        "https://play.google.com/store/apps/details?id=com.corebugcode.fletix"
+      ]
+    }
+    </script>
+
+    <!-- ============================================
+         CANONICAL URL
+         ============================================ -->
+    <link rel="canonical" href="https://fletix.vercel.app/" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Necesitas habilitar JavaScript para usar FletiX - Plataforma Logística</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
